# vala-cycle-detector

./: README.md  find-cycles.py  meson.build
src/: Application.vala  GraphBuilder.vala  meson.build
